[package]
name = "Groove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
binance = "0.20.2"
btcturk = "0.1.0"
rust_decimal = "1.5"
dotenv = "0.15.0"
rusqlite = "0.30.0"
chrono = "0.4.32"